# peanut_task

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  justfile  pyproject.toml
docs/: PROJECT_STRUCTURE.md  SIGNATURE_IMPLEMENTATION.md
examples/: compile_time_safety_demo.rs  serializer_demo.rs  sign_message_demo.rs  sign_typed_data_demo.rs  signature_algorithm_demo.rs
src/: __main__.py  dependency.rs  lib.rs  main.rs
src/chain/: chain_client.rs  errors.rs  gas_price.rs  mod.rs  parsers.rs  receipt_polling.rs  transaction_builder.rs  url_wrapper.rs
src/core/: address.rs  base_types.rs  basic_structs.rs  mod.rs  serializer.rs  signature_algorithms.rs  signatures.rs  token.rs  token_amount.rs  token_info.rs  transaction_receipt.rs  utility.rs  wallet_manager.rs
src/pricing/: mod.rs  price_impact_analyzer.rs  uniswap_v2_pair.rs
tests/: address_derivation_tests.rs  chain_client_tests.rs  key_security_tests.rs  key_validity_tests.rs  price_impact_analyzer_tests.rs  serializer_tests.rs  signature_algorithm_tests.rs  signature_verification_tests.rs  spec_tests.rs  test.rs  test_placeholder.py  token_amount_tests.rs  transaction_address_validation_tests.rs  transaction_builder_tests.rs  transaction_receipt_tests.rs  uniswap_v2_pair_tests.rs  url_wrapper_tests.rs
