[package]
name = "peanut_task"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
getrandom = "0.3.4"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.18"

[lib]
path = "src/lib.rs"

[[bin]]
name = "peanut_task"
path = "src/main.rs"
