[package]
name = "peanut_task"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["provider-http"] }
rust_decimal = "1"
url = "2.5"
dotenvy = "0.15.7"
getrandom = "0.3.4"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
httpmock = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
name = "peanut_task"
path = "src/main.rs"
